# fast_zero

./: README.md  pyproject.toml
fast_zero/: app.py  models.py  security.py
fast_zero/routes/: users.py
migrations/: env.py
migrations/versions/: 4bd4f8869f0a_create_table_tokens.py  5bf7f22a2210_create_users_table.py  de502a984f49_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_schemas.py  test_token.py  test_user.py
